--- a/src/main/Payment/Payment.fxml
+++ b/src/main/Payment/Payment.fxml
@@ -79,22 +79,31 @@
                                                             <Font name="SansSerif Regular" size="12.0" />
                                                          </font></TextField>
                                                       <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="250.0" layoutY="81.0" pickOnBounds="true" preserveRatio="true" />
-                                                      <ImageView fitHeight="30.0" fitWidth="49.0" layoutX="32.0" layoutY="114.0" pickOnBounds="true" preserveRatio="true" />
-                                                      <ImageView fitHeight="30.0" fitWidth="49.0" layoutX="90.0" layoutY="114.0" pickOnBounds="true" preserveRatio="true" />
-                                                      <ImageView fitHeight="30.0" fitWidth="49.0" layoutX="149.0" layoutY="114.0" pickOnBounds="true" preserveRatio="true" />
-                                                      <CheckBox fx:id="checkButtonPayment" layoutX="30.0" layoutY="180.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="329.0" styleClass="cursor-hand" text="Spara mina kortuppgifter till nästa köp">
+                                                      <ImageView fitHeight="39.0" fitWidth="51.0" layoutX="32.0" layoutY="110.0" pickOnBounds="true" preserveRatio="true">
+                                                         <image>
+                                                            <Image url="@../Res/Images/visa.png" />
+                                                         </image></ImageView>
+                                                      <ImageView fitHeight="39.0" fitWidth="49.0" layoutX="80.0" layoutY="110.0" pickOnBounds="true" preserveRatio="true">
+                                                         <image>
+                                                            <Image url="@../Res/Images/mastercard.png" />
+                                                         </image></ImageView>
+                                                      <ImageView fitHeight="39.0" fitWidth="49.0" layoutX="134.0" layoutY="110.0" pickOnBounds="true" preserveRatio="true">
+                                                         <image>
+                                                            <Image url="@../Res/Images/amex.png" />
+                                                         </image></ImageView>
+                                                      <CheckBox fx:id="checkButtonPayment" layoutX="30.0" layoutY="175.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="329.0" styleClass="cursor-hand" text="Spara mina kortuppgifter till nästa köp">
                                                          <font>
                                                             <Font name="SansSerif Regular" size="17.0" />
                                                          </font></CheckBox>
-                                                      <Label fx:id="cardErrorLabel" layoutX="30.0" layoutY="155.0" prefHeight="17.0" prefWidth="226.0" text="OBS! Inget fält få vara tomt!" textFill="RED">
+                                                      <Label fx:id="cardErrorLabel" layoutX="30.0" layoutY="145.0" prefHeight="17.0" prefWidth="226.0" text="OBS! Inget fält få vara tomt!" textFill="RED">
                                                          <font>
                                                             <Font name="SansSerif Regular" size="12.0" />
                                                          </font></Label>
-                                                      <Label fx:id="cardStyleErrorLabel" layoutX="30.0" layoutY="155.0" prefHeight="17.0" prefWidth="226.0" text="OBS! Fälten få bara innehållla tal!!" textFill="RED">
+                                                      <Label fx:id="cardStyleErrorLabel" layoutX="30.0" layoutY="145.0" prefHeight="17.0" prefWidth="226.0" text="OBS! Fälten få bara innehållla tal!!" textFill="RED">
                                                          <font>
                                                             <Font name="SansSerif Regular" size="12.0" />
                                                          </font></Label>
-                                                      <Label fx:id="cardAmountErrorLabel" layoutX="30.0" layoutY="155.0" prefHeight="17.0" prefWidth="226.0" text="OBS! Gå igenom antal siffror vid fälten!" textFill="RED">
+                                                      <Label fx:id="cardAmountErrorLabel" layoutX="30.0" layoutY="145.0" prefHeight="17.0" prefWidth="226.0" text="OBS! Gå igenom antal siffror vid fälten!" textFill="RED">
                                                          <font>
                                                             <Font name="SansSerif Regular" size="12.0" />
                                                          </font></Label>
